tests/transpiler/x/zig/for_map_collection.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/for_map_collection.zig:6:10: error: type 'hash_map.HashMap([]const u8,i64,hash_map.StringContext,80)' is not indexable and not a range
    for (m) |k| {
         ^
/workspace/mochi/tests/transpiler/x/zig/for_map_collection.zig:6:10: note: for loop operand must be a range, array, slice, tuple, or vector
referenced by:
    callMain [inlined]: /workspace/mochi/zig-x86_64-linux-0.15.0-dev.1160+e43617e68/lib/std/start.zig:668:22
    callMainWithArgs [inlined]: /workspace/mochi/zig-x86_64-linux-0.15.0-dev.1160+e43617e68/lib/std/start.zig:637:20
    posixCallMainAndExit: /workspace/mochi/zig-x86_64-linux-0.15.0-dev.1160+e43617e68/lib/std/start.zig:592:36
    2 reference(s) hidden; use '-freference-trace=5' to see all references
